tests/error/struct_missing_polymorph/main.adept

pragma => adept("3.0")

struct Vector (items ptr<$T>, length ulonglong, capacity ulonglong)

func main {}
